--- a/sky-server/src/main/resources/application-dev.yml
+++ b/sky-server/src/main/resources/application-dev.yml
@@ -6,3 +6,8 @@ sky:
     database: sky_take_out
     username: root
     password: 123456
+  alioss:
+    endpoint: oss-cn-hangzhou.aliyuncs.com
+    access-key-id:  LTAI5tMHPL9YM3qUum9NL2tU
+    access-key-secret:  LnooeCcmIKwKYxU78q9kC9fc7HiHL5
+    bucket-name: sky---takeout
