--- a/sky-server/src/main/resources/application.yml
+++ b/sky-server/src/main/resources/application.yml
@@ -37,3 +37,8 @@ sky:
     admin-ttl: 7200000
     # 设置前端传递过来的令牌名称
     admin-token-name: token
+  alioss:
+    endpoint: ${sky.alioss.endpoint}
+    access-Key-id: ${sky.alioss.access-Key-id}
+    access-Key-secret: ${sky.alioss.access-Key-secret}
+    bucket-name: ${sky.alioss.bucket-name}
