--- a/sky-server/src/main/resources/application-dev.yml
+++ b/sky-server/src/main/resources/application-dev.yml
@@ -11,3 +11,8 @@ sky:
     access-key-id:  LTAI5tMHPL9YM3qUum9NL2tU
     access-key-secret:  LnooeCcmIKwKYxU78q9kC9fc7HiHL5
     bucket-name: sky---takeout
+  redis:
+    host: localhost
+    port: 6379
+    password: 123456
+    database: 0
